Eliminated 3 redundant layouts. Hooray!

--- a/app/views/layouts/rails_admin/main.html.haml
+++ b/app/views/layouts/rails_admin/main.html.haml
@@ -1,3 +1,6 @@
+- if @abstract_model && @plugin_name
+  - content_for :title do
+    #{@abstract_model.pretty_name} | #{@plugin_name}
 = render(:partial => 'layouts/rails_admin/head')
 %body
   #container
@@ -8,3 +11,4 @@
         #footer
           %p Rails Admin | 2011
       = render :partial => "layouts/rails_admin/sidebar"
+      
