--- a/app/views/layouts/rails_admin/_header.html.haml
+++ b/app/views/layouts/rails_admin/_header.html.haml
@@ -10,9 +10,9 @@
   #user-navigation
     %ul.wat-cf
       %li= link_to icon(:home, "Dashboard"), rails_admin_dashboard_path
-      - if current_user rescue nil
+      - if (current_user rescue nil)
         %li= link_to icon(:account, current_user.email), (rails_admin_edit_path(:user, current_user) rescue '#')
       %li= link_to icon(:config, "Preferences"), rails_admin_dashboard_path
-      - if current_user rescue nil
+      - if (current_user rescue nil)
         %li= link_to icon(:logout, t("admin.credentials.log_out")), (destroy_session_path(current_user) rescue '#')
       
