--- a/app/views/layouts/rails_admin/_header.html.haml
+++ b/app/views/layouts/rails_admin/_header.html.haml
@@ -1,18 +1,14 @@
 #header
   %h1
-  
-  / TODO: make the logo customisable:
-  
-  / %h1#logo
-  /   = link_to rails_admin_dashboard_path do
-  /     %span.image_replacement= @plugin_name
+  -# TODO: make the logo customisable and link to the dashboard
   
   #user-navigation
     %ul.wat-cf
-      %li= link_to icon(:home, "Dashboard"), rails_admin_dashboard_path
+      %li= link_to icon(:config, "Dashboard"), rails_admin_dashboard_path
+      - if (root_path rescue nil)
+        %li= link_to icon(:home, t('home.name').capitalize), root_path
       - if (current_user rescue nil)
         %li= link_to icon(:account, current_user.email), (rails_admin_edit_path(:user, current_user) rescue '#')
-      %li= link_to icon(:config, "Preferences"), rails_admin_dashboard_path
       - if (current_user rescue nil)
         %li= link_to icon(:logout, t("admin.credentials.log_out")), (destroy_session_path(current_user) rescue '#')
       
