--- a/app/views/rails_admin/main/list.html.haml
+++ b/app/views/rails_admin/main/list.html.haml
@@ -69,10 +69,15 @@
             %th.other.right{ :style => "#{'display: none' if @other.include?("right")}" }...
         
             %th.last
-        
+            
           %tbody
             - @objects.each do |object|
-              %tr{:class => cycle("odd", "even")}
+              - can_edit  = authorized?(:edit, @abstract_model, object)
+              - edit_path = rails_admin_edit_path(:model_name => @abstract_model.to_param, :id => object.id) if can_edit
+              - row_class = "#{cycle("odd", "even")}#{" link" if can_edit}"
+              
+              %tr{:class => row_class, :"data-link" => (edit_path if can_edit)}
+              
                 %td.action.select= check_box_tag "bulk_ids[]", object.id, false, :id => "bulk_destroy_#{object.id}", :class => "checkbox"
                 - other_left = params.reject{|key, value| key == "set"}.merge(:set => params[:set].to_i - 1)
                 %td.other.left{ :style => "#{'display: none' if @other.include?("left")}" }= link_to "...", other_left, :remote => true
@@ -83,8 +88,8 @@
                 %td.last
                   - if show_url = url_for(object) rescue nil
                     = action_icon(show_url, :show, "Show")   
-                  - if authorized? :edit, @abstract_model, object
-                    = action_icon(rails_admin_edit_path(:model_name => @abstract_model.to_param, :id => object.id), :edit, t("admin.list.edit_action"))                  
+                  - if can_edit
+                    = action_icon(edit_path, :edit, t("admin.list.edit_action"))                  
                   - if authorized? :delete, @abstract_model, object
                     = action_icon(rails_admin_delete_path(:model_name => @abstract_model.to_param, :id => object.id), :cross, t("admin.list.delete_action")) 
       
