Some custom css for the navigation links.

--- a/app/views/layouts/rails_admin/_head.html.haml
+++ b/app/views/layouts/rails_admin/_head.html.haml
@@ -6,7 +6,7 @@
     %meta{:content => "NONE,NOARCHIVE", :name => "robots"}/
     /= stylesheet_link_tag('rails_admin/aristo/jquery-ui-1.8.7.custom.css', 'rails_admin/base')
     
-    = stylesheet_link_tag *%w[base jquery-ui formtastic jquery.tipsy.css uniform.default.css]
+    = stylesheet_link_tag *%w[base jquery-ui formtastic jquery.tipsy.css uniform.default.css rails_admin/base]
     %link#current-theme{:href => "/stylesheets/themes/activo/style.css", :media => "screen", :rel => "stylesheet", :type => "text/css"}
     
     
