Have activo/application.js re-loaded when doing ajaxy stuff on the list page. Closes #9.

--- a/app/views/rails_admin/main/list.html.haml
+++ b/app/views/rails_admin/main/list.html.haml
@@ -8,6 +8,7 @@
 - # columns paginate
 - @style, @other, properties = get_column_set(properties)
 - head_javascript "rails_admin/application.js"
+- head_javascript "rails_admin/activo/application.js"
 - head_style "rails_admin/list"
 - head_javascript do
   $j(document).ready(function($) {
