--- a/app/views/layouts/rails_admin/_head.html.haml
+++ b/app/views/layouts/rails_admin/_head.html.haml
@@ -13,8 +13,10 @@
     = javascript_fallback "http://ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.min.js", "/javascripts/rails_admin/jquery-1.5.1.min.js", "typeof jQuery == 'undefined'"
     = javascript_fallback "http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.10/jquery-ui.min.js", "/javascripts/rails_admin/jquery-ui-1.8.10.min.js", "!jQuery.ui"
 
-    - scripts = %w[application.js jquery.localscroll.js jquery.scrollTo.js jquery.tipsy.js jquery.uniform.min.js ]
+    - scripts = %w[jquery.localscroll.js jquery.scrollTo.js jquery.tipsy.js jquery.uniform.min.js ]
     = javascript_include_tag *scripts.map{ |s| "rails_admin/activo/#{s}" }
+
+    - head_javascript "rails_admin/activo/application.js"
 
     = javascript_include_tag "rails_admin/rails.js"
 
