--- a/app/views/rails_admin/main/index.html.haml
+++ b/app/views/rails_admin/main/index.html.haml
@@ -25,8 +25,9 @@
                   - if (last_used = @most_recent_changes[abstract_model.pretty_name])
                     = time_ago_in_words last_used
                     = t "admin.dashboard.ago"
-                %td
-                  .scale
+                %td.count
+                  %span.number= @count[abstract_model.pretty_name]
+                  %span.scale
                     - percent = @count[abstract_model.pretty_name] * 100 / @max unless @max == 0
                     - percent = 1 if percent.nil?
                     %div{:class => "bar #{get_indicator(percent)}", :style => "width:#{percent}%;"}
