Added makeshift rails_admin logo, put it in a partial to be easily overrideable, links to dashboard. Closes #3.

--- a/app/views/layouts/rails_admin/_header.html.haml
+++ b/app/views/layouts/rails_admin/_header.html.haml
@@ -1,6 +1,6 @@
 #header
+  = render :partial => "title"
   %h1
-  -# TODO: make the logo customisable and link to the dashboard
 
   #user-navigation
     %ul.wat-cf
