--- a/public/stylesheets/rails_admin/base.css
+++ b/public/stylesheets/rails_admin/base.css
@@ -1,5 +1,21 @@
 /* Code is poetry */
 
+#container #header {
+  background-image: none;
+}
+
+#header h1.title {
+  float: left;
+  padding: 15px 5px;
+  text-shadow: 1px 1px 1px #000;
+  font-family: Tahoma, "Arial Black", Arial"MS Trebuchet", sans-serif;
+  font-weight: bold;
+}
+
+.red {
+  color: #C00;
+}
+
 ul#nav li.active {
   background-color: #bcbcbc;
 }
