--- a/app/views/rails_admin/main/_history.html.haml
+++ b/app/views/rails_admin/main/_history.html.haml
@@ -1,11 +1,12 @@
 %br
 %h4= "#{month_names[month - 1]} #{year} #{t("admin.history.name").downcase}"
-%table.table.grid
-  / %tr
-  /   %th User
-  /   %th Changes
+%table#history.table.grid
+  %thead
+    %tr
+      %th.start User
+      %th Changes
   %tbody
     - history.each do |t|
       %tr{:class => cycle('even', 'odd')}
-        %td{:style => "text-align: left;"}= t.username
-        %td{:style => "text-align: left;"}= history_output(t)
+        %td.start= t.username
+        %td= history_output(t)
