--- a/app/views/rails_admin/main/list.html.haml
+++ b/app/views/rails_admin/main/list.html.haml
@@ -100,7 +100,7 @@
             = paginate(@current_page, @page_count, :url => params).html_safe
           - if @page_count.to_i == 2
             = link_to(t("admin.list.show_all"), params.merge(:all => true), :remote => true, :class => "showall")
-        .left(style="float:left; padding-top:0.5em;")
+        .left(style="white-space: nowrap; padding-top:0.5em;")
           = @record_count
           = @model_config.abstract_model.model.model_name.human(:count => @record_count, :default => @record_count != 1 ? @model_config.label.downcase.pluralize : @model_config.label.downcase)
 
