Added and applied breadcrumbs_for helper. Single line can create breadcrumbs for any view.

--- a/app/views/rails_admin/history/show.html.haml
+++ b/app/views/rails_admin/history/show.html.haml
@@ -8,6 +8,11 @@
 - head_style "rails_admin/list"
 
 #block-tables.block
+  - if @object
+    = breadcrumbs_for :history, @object
+  - else
+    = breadcrumbs_for :model_history, @abstract_model
+    
   .content
     %h2.title= @page_name
     .inner
