--- a/app/views/rails_admin/main/delete.html.haml
+++ b/app/views/rails_admin/main/delete.html.haml
@@ -1,6 +1,8 @@
 - head_javascript "rails_admin/application.js"
 
 #block-tables.block
+  = breadcrumbs_for :delete, @object
+  
   .content
     %h2.title Delete confirmation
     .inner
