--- a/app/views/rails_admin/main/edit.html.haml
+++ b/app/views/rails_admin/main/edit.html.haml
@@ -3,25 +3,20 @@
 - head_javascript "rails_admin/ra.remote-form.js"
 
 #block-tables.block
-  .secondary-navigation
-    %ul.wat-cf
-      %li.first= link_to "Index", rails_admin_list_path(@abstract_model)
-      %li
-        %a{:href => "#block-tables"} Show
-      %li.active
-        %a{:href => "#block-forms"} Edit
+  = breadcrumbs_for :edit, @object
+  
   .content
     .control
       = link_to rails_admin_history_object_path(:id => params[:id]), :class => "button" do
         = t("admin.history.name")
       - if authorized? :delete, @abstract_model, @object
-        = link_to rails_admin_delete_path(:model_name => @abstract_model.to_param, :id => params[:id]), :class => "button" do
+        = link_to rails_admin_delete_path(@abstract_model, @object), :class => "button" do
           %img{:alt => "Remove", :src => "/stylesheets/themes/activo/images/icons/cross.png"}
             = t("admin.list.delete_action")
     %h2.title= @page_name
     .inner
       = render(:partial => 'layouts/rails_admin/flash', :locals => {:flash => flash})
-      = form_for(@object, :url => rails_admin_update_path(:model_name => @abstract_model.to_param, :id => @object.id), :class => "form", :html => { :method => "put", :multipart => true }) do |form|
+      = form_for(@object, :url => rails_admin_update_path(@abstract_model, @object), :class => "form", :html => { :method => "put", :multipart => true }) do |form|
         - @model_config.edit.with(:object => @object).visible_groups.each do |fieldset|
           = render :partial => 'form_fieldset', :locals => { :fieldset => fieldset, :form => form, :object => @object }
         = render :partial => 'submit_buttons'
