--- a/app/views/rails_admin/main/edit.html.haml
+++ b/app/views/rails_admin/main/edit.html.haml
@@ -7,12 +7,11 @@
   
   .content
     .control
-      = link_to rails_admin_history_object_path(:id => params[:id]), :class => "button" do
-        = t("admin.history.name")
+      = action_button rails_admin_history_object_path(:id => params[:id]), t("admin.history.name")
+      
       - if authorized? :delete, @abstract_model, @object
-        = link_to rails_admin_delete_path(@abstract_model, @object), :class => "button" do
-          %img{:alt => "Remove", :src => "/stylesheets/themes/activo/images/icons/cross.png"}
-            = t("admin.list.delete_action")
+        = action_button rails_admin_delete_path(@abstract_model, @object), t("admin.list.delete_action"), :cross
+        
     %h2.title= @page_name
     .inner
       = render(:partial => 'layouts/rails_admin/flash', :locals => {:flash => flash})
