--- a/app/views/rails_admin/history/show.html.haml
+++ b/app/views/rails_admin/history/show.html.haml
@@ -18,32 +18,23 @@
     .inner
       = render(:partial => 'layouts/rails_admin/flash', :locals => {:flash => flash})
       %table.table.grid
-        %tr
-          - property_name = "created_at"
-          - selected = sort == property_name.to_s
-          - sort_direction = selected ? (sort_reverse ? "ascending" : "descending") : nil
-          %th{:class => "dateTime #{sort == property_name.to_s ? "selected" : nil}"}
-            - sort_location = rails_admin_history_model_path(params.merge(:model_name => @abstract_model.to_param, :sort => property_name).reject{|key, value| key.to_sym == :sort_reverse}.merge(selected && sort_reverse != "true" ? {:sort_reverse => "true"} : {}))
-            = link_to("DATE/TIME", sort_location, :class => sort_direction)
-          - property_name = "username"
-          - selected = sort == property_name.to_s
-          - sort_direction = selected ? (sort_reverse ? "ascending" : "descending") : nil
-          %th{:class => "smallString #{sort == property_name.to_s ? "selected" : nil}"}
-            - sort_location = rails_admin_history_model_path(params.merge(:model_name => @abstract_model.to_param, :sort => property_name).reject{|key, value| key.to_sym == :sort_reverse}.merge(selected && sort_reverse != "true" ? {:sort_reverse => "true"} : {}))
-            = link_to("USER", sort_location, :class => sort_direction)
-          - if @general
-            - property_name = "item"
-            - selected = sort == property_name.to_s
-            - sort_direction = selected ? (sort_reverse ? "ascending" : "descending") : nil
-            %th{:class => "int #{sort == property_name.to_s ? "selected" : nil}"}
-              - sort_location = rails_admin_history_model_path(params.merge(:model_name => @abstract_model.to_param, :sort => property_name).reject{|key, value| key.to_sym == :sort_reverse}.merge(selected && sort_reverse != "true" ? {:sort_reverse => "true"} : {}))
-              = link_to("ITEM", sort_location, :class => sort_direction)
-          - property_name = "message"
-          - selected = sort == property_name.to_s
-          - sort_direction = selected ? (sort_reverse ? "ascending" : "descending") : nil
-          %th{:class => "smallString #{sort == property_name.to_s ? "selected" : nil}"}
-            - sort_location = rails_admin_history_model_path(params.merge(:model_name => @abstract_model.to_param, :sort => property_name).reject{|key, value| key.to_sym == :sort_reverse}.merge(selected && sort_reverse != "true" ? {:sort_reverse => "true"} : {}))
-            = link_to("ACTION", sort_location, :class => sort_direction)
+        %thead
+          %tr
+            - columns = []
+            - columns << { :property_name => "created_at", :css_class => "dateTime",    :link_text => "DATE/TIME" }
+            - columns << { :property_name => "username",   :css_class => "smallString", :link_text => "USER"      }
+            - columns << { :property_name => "item",       :css_class => "int",         :link_text => "ITEM"      } if @general
+            - columns << { :property_name => "message",    :css_class => "smallString", :link_text => "ACTION"    }
+            
+            - columns.each do |column|
+              - property_name = column[:property_name]
+              - selected = (sort == property_name)
+              - sort_direction = selected ? (sort_reverse ? "ascending" : "descending") : nil
+            
+              %th{:class => "#{column[:css_class]}#{" selected" if selected}"}
+                - sort_location = rails_admin_history_model_path(params.merge(:model_name => @abstract_model.to_param, :sort => property_name).reject{|key, value| key.to_sym == :sort_reverse}.merge(selected && sort_reverse != "true" ? {:sort_reverse => "true"} : {}))
+                = link_to(column[:link_text], sort_location, :class => sort_direction)
+            
         - if @general
           %tfoot
             %tr
