--- a/app/views/rails_admin/main/list.html.erb
+++ b/app/views/rails_admin/main/list.html.erb
@@ -37,7 +37,7 @@
           <div class="ra-block-toolbar ui-state-highlight">
             <ul>
               <li>
-               <%= link_to(t("admin.list.export_csv"), rails_admin_list_path(:model_name => @abstract_model.to_param, :format => :csv), :class => "ra-button") %>
+               <%= link_to(t("admin.list.export"), rails_admin_export_path(params.reject{|key, value| key.to_sym == :page}), :class => "ra-button") %>
               </li>
               <li>
                <%= link_to(t("admin.history.name"), rails_admin_history_model_path, :class => "ra-button") %>
