--- a/app/views/rails_admin/main/new.html.haml
+++ b/app/views/rails_admin/main/new.html.haml
@@ -10,7 +10,7 @@
     %h2.title= @page_name
     .inner
       = render(:partial => 'layouts/rails_admin/flash', :locals => {:flash => flash})
-      = form_for(@object, :url => rails_admin_create_path(:model_name => @abstract_model.to_param, :id => @object.id), :class => "form", :html => { :multipart => true }) do |form|
+      = send(@model_config.create.form_builder, @object, :url => rails_admin_create_path(:model_name => @abstract_model.to_param, :id => @object.id), :class => "form", :html => { :multipart => true }) do |form|
         - @model_config.create.with(:object => @object).visible_groups.each do |fieldset|
           = render :partial => 'form_fieldset', :locals => { :fieldset => fieldset, :form => form, :object => @object }
         = render :partial => 'submit_buttons'
