Added a fix for uniform.js checkbox css. Should help with #34.

--- a/public/stylesheets/rails_admin/base.css
+++ b/public/stylesheets/rails_admin/base.css
@@ -28,3 +28,8 @@ ul#nav li:hover {
   font-weight: bold;
   color: inherit;
 }
+
+/* Fix for uniform.js checkbox css: */
+div.checker input.checkbox {
+  margin: 0;
+}
