--- a/app/views/rails_admin/main/_submit_buttons.html.haml
+++ b/app/views/rails_admin/main/_submit_buttons.html.haml
@@ -4,8 +4,9 @@
   %button.button{:type => "submit", :name => "_save"}
     = image_tag "/stylesheets/rails_admin/theme/activo/images/icons/tick.png", :alt => t("admin.new.save")
     = t("admin.new.save")
-  - if authorized? :new, @abstract_model
-    %button.button{:type => "submit", :name => "_add_another"}= t("admin.new.save_and_add_another")
-  %button.button{:type => "submit", :name => "_add_edit"}= t("admin.new.save_and_edit")
-  %button.button{:type => "submit", :name => "_continue"} Cancel
+  %span.extra_buttons
+    - if authorized? :new, @abstract_model
+      %button.button{:type => "submit", :name => "_add_another"}= t("admin.new.save_and_add_another")
+    %button.button{:type => "submit", :name => "_add_edit"}= t("admin.new.save_and_edit")
+    %button.button{:type => "submit", :name => "_continue"} Cancel
   
