--- a/app/views/rails_admin/main/new.html.haml
+++ b/app/views/rails_admin/main/new.html.haml
@@ -2,6 +2,7 @@
 - head_style "rails_admin/form.css"
 - head_javascript "rails_admin/application.js"
 - head_javascript "rails_admin/ra.remote-form.js"
+- head_javascript "rails_admin/activo/application.js"
 
 #block-tables.block
   = breadcrumbs_for :new, @abstract_model
